Fix print overflow / cut-off issue

--- a/testing/output/css/fnsb.css
+++ b/testing/output/css/fnsb.css
@@ -45,6 +45,7 @@ section h3 {
 
 .container {
   width: 90%;
+  overflow: visible;
 }
 
 .graph {
