--- a/testing/output/css/print.css
+++ b/testing/output/css/print.css
@@ -1,7 +1,29 @@
-.graph {
-  display: inline-block;
-}
+@media print {
+  body,
+  h1,
+  h2,
+  h3,
+  ol,
+  ul,
+  div,
+  span,
+  p {
+    display: block !important;
+    width: auto !important;
+    float: none !important;
+    position: static !important;
+    overflow: visible !important;
+  }
 
-.table-of-contents {
-  display: none;
+  .graph {
+    display: inline-block;
+  }
+
+  .navbar {
+    display: none !important;
+  }
+
+  .table-of-contents {
+    display: none;
+  }
 }
